# jour

./: .gitignore  Dockerfile  README.md  cli.py  compose.yaml  package.json  pyproject.toml  requirements.in  requirements.txt  run.py
.github/: dependabot.yaml
.github/workflows/: build-and-deploy.yaml  build-container-image.yaml  ruff.yaml
.github/workfows/: build-container-image.yaml
ci/: gen-github-workflows.py  gen-package-json.py  gen.py  ruff-check.sh  ruff-format.sh  ssh-deploy.sh
jour/: app.py  components.py  filters.py  versions.py
jour/db/: __init__.py  settings.py
jour/models/: __init__.py  journals.py  settings.py
jour/static/: bootstrap-icons-1.11.3.css
jour/templates/: base.html  caldav.html  configure.html  day-edit.html  day.html  index.html  journal.html  month.html  monthly-calendar.html  monthly.html  not-authorized.html  search.html  select-collection.html
