[project]
name = "jour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.0",
    "fort>=2024.2",
    "htpy>=25.4.0",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "markdown>=3.10",
    "markupsafe>=3.0.2",
    "notch>=2023.1",
    "pyjwt>=2.10.1",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "ty>=0.0.16",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
